chore(unity-bootstrap-theme): fix cookie consent stories and add gap in buttons

--- a/packages/unity-bootstrap-theme/src/css/cookie-consent-full-screen.css
+++ b/packages/unity-bootstrap-theme/src/css/cookie-consent-full-screen.css
@@ -63,6 +63,7 @@
     flex-wrap: wrap !important;
     justify-content: center !important;
     flex: 1 1 400px;
+    gap: 1rem;
   }
 
   .cassie-pre-banner>.cassie-pre-banner--text  {
